Space between two colunms elevated

--- a/Daikan Aircon Specials South Africa.html
+++ b/Daikan Aircon Specials South Africa.html
@@ -162,22 +162,22 @@ Author URL: http://iWADCommunity.com
                     <tbody>
                         <tr>
                             <td><img src="images/DAIKIN.jpg" width="100" height="100"><p>DAIKIN (INVERTER)</p></td>
-                            <td>9000BTU <i>(Cooling and Heating)</i></td>
+                            <td>9000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>12 - 18 Meters <i>(Squared)</i></td>
                         </tr>
                         <tr>
                             <td><img src="images/DAIKIN.jpg" width="100" height="100"><p>DAIKIN (INVERTER)</p></div>
-                            <td>12000BTU <i>(Cooling and Heating)</i></td>
+                            <td>12000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>15 - 22 Meters <i>(Squared)</td>
                         </tr>
                         <tr>
                             <td><img src="images/DAIKIN.jpg" width="100" height="100"><p>DAIKIN (INVERTER)</p></div>
-                            <td>18000BTU <i>(Cooling and Heating)</i></td>
+                            <td>18000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>22 - 32 Meters <i>(Squared)</td>
                         </tr>
                         <tr>
                             <td><img src="images/DAIKIN.jpg" width="100" height="100"><p>DAIKIN (INVERTER)</p></div>
-                            <td>24000BTU <i>(Cooling and Heating)</i></td>
+                            <td>24000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>29 - 42 Meters <i>(Squared)</td>
                         </tr>
                         <thead>
@@ -191,22 +191,22 @@ Author URL: http://iWADCommunity.com
                         </thead>
                         <tr>
                             <td><img src="images/DAIKIN.jpg" width="100" height="100"><p>DAIKIN (NON-INVERTER)</p></td>
-                            <td>9000BTU <i>(Cooling and Heating)</i></td>
+                            <td>9000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>12 - 18 Meters <i>(Squared)</i></td>
                         </tr>
                         <tr>
                             <td><img src="images/DAIKIN.jpg" width="100" height="100"><p>DAIKIN (NON-INVERTER</p></div>
-                            <td>12000BTU <i>(Cooling and Heating)</i></td>
+                            <td>12000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>15 - 22 Meters <i>(Squared)</td>
                         </tr>
                         <tr>
                             <td><img src="images/DAIKIN.jpg" width="100" height="100"><p>DAIKIN (NON-INVERTER)</p></div>
-                            <td>18000BTU <i>(Cooling and Heating)</i></td>
+                            <td>18000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>22 - 32 Meters <i>(Squared)</td>
                         </tr>
                         <tr>
                             <td><img src="images/DAIKIN.jpg" width="100" height="100"><p>DAIKIN (NON-INVERTER)</p></div>
-                            <td>24000BTU <i>(Cooling and Heating)</i></td>
+                            <td>24000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>29 - 42 Meters <i>(Squared)</td>
                         </tr>
 
