--- a/otherPrices.html
+++ b/otherPrices.html
@@ -162,58 +162,59 @@
         <tbody>
             <tr>
                 <td></td>
-                <td>9000BTU <i>(Cooling and Heating)</i></td>
+                <td>9000BTU <br>
+                <i>(Cooling and Heating)</i></td>
                 <td>12 - 18 Meters <i>(Squared)</i></td>
             </tr>
             <tr>
                 <td></td>
-                <td>12000BTU <i>(Cooling and Heating)</i></td>
+                <td>12000BTU <br><i>(Cooling and Heating)</i></td>
                 <td>15 - 22 Meters <i>(Squared)</td>
             </tr>
             <tr>
                 <td></td>
-                <td>12000BTU <i>(Cooling and Heating)</i></td>
+                <td>12000BTU <br><i>(Cooling and Heating)</i></td>
                 <td>15 - 22 Meters <i>(Squared)</td>
             </tr>
             <tr>
                 <td></td>
-                <td>18000BTU <i>(Cooling and Heating)</i></td>
+                <td>18000BTU <br><i>(Cooling and Heating)</i></td>
                 <td>22 - 32 Meters <i>(Squared)</td>
             </tr>
             <tr>
                 <td></td>
-                <td>24000BTU <i>(Cooling and Heating)</i></td>
+                <td>24000BTU <br><i>(Cooling and Heating)</i></td>
                 <td>29 - 42 Meters <i>(Squared)</td>
             </tr>
             <br>
             <tr>
                 <td></td>
-                <td>9000BTU <i>(Cooling and Heating)</i></td>
+                <td>9000BTU <br><i>(Cooling and Heating)</i></td>
                 <td>12 - 18 Meters <i>(Squared)</i></td>
             </tr>
             <tr>
                 <td></td>
-                <td>12000BTU <i>(Cooling and Heating)</i></td>
+                <td>12000BTU <br> <i>(Cooling and Heating)</i></td>
                 <td>15 - 22 Meters <i>(Squared)</td>
             </tr>
             <tr>
                 <td></td>
-                <td>12000BTU <i>(Cooling and Heating)</i></td>
+                <td>12000BTU <br><i>(Cooling and Heating)</i></td>
                 <td>15 - 22 Meters <i>(Squared)</td>
             </tr>
             <tr>
                 <td></td>
-                <td>18000BTU <i>(Cooling and Heating)</i></td>
+                <td>18000BTU <br><i>(Cooling and Heating)</i></td>
                 <td>22 - 32 Meters <i>(Squared)</td>
             </tr>
             <tr>
                 <td></td>
-                <td>9000BTU <i>(Cooling and Heating)</i></td>
+                <td>9000BTU <br><i>(Cooling and Heating)</i></td>
                 <td>12 - 18 Meters <i>(Squared)</i></td>
             </tr>
             <tr>
                 <td></td>
-                <td>12000BTU <i>(Cooling and Heating)</i></td>
+                <td>12000BTU <br><i>(Cooling and Heating)</i></td>
                 <td>15 - 22 Meters <i>(Squared)</td>
             </tr>
             
