--- a/Jet-Air Aircone Specials South Africa.html
+++ b/Jet-Air Aircone Specials South Africa.html
@@ -161,32 +161,32 @@ Author URL: http://iWADCommunity.com
                     <tbody>
                         <tr>
                             <td><img src="images/IMG-20200903-WA0036.jpg" width="100" height="100"><p>JET-AIR (INVERTER)</p></td>
-                            <td>9000BTU <i>(Cooling and Heating)</i></td>
+                            <td>9000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>12 - 18 Meters <i>(Squared)</i></td>
                         </tr>
                         <tr>
                             <td><img src="images/IMG-20200903-WA0027.jpg" width="100" height="100"><p>JET-AIR (INVERTER)</p></div>
-                            <td>12000BTU <i>(Cooling and Heating)</i></td>
+                            <td>12000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>15 - 22 Meters <i>(Squared)</td>
                         </tr>
                         <tr>
                             <td><img src="images/IMG-20200903-WA0036.jpg" width="100" height="100"><p>JET-AIR (INVERTER)</p></div>
-                            <td>18000BTU <i>(Cooling and Heating)</i></td>
+                            <td>18000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>22 - 32 Meters <i>(Squared)</td>
                         </tr>
                         <tr>
                             <td><img src="images/IMG-20200903-WA0027.jpg" width="100" height="100"><p>JET-AIR (INVERTER)</p></div>
-                            <td>24000BTU <i>(Cooling and Heating)</i></td>
+                            <td>24000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>29 - 42 Meters <i>(Squared)</td>
                         </tr>
                         <tr>
                             <td><img src="images/IMG-20200903-WA0036.jpg"width="100" height="100"><p>JET-AIR (INVERTER)</p></div>
-                            <td>30000BTU <i>(Cooling and Heating)</i></td>
+                            <td>30000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>39 - 56 Meters <i>(Squared)</td>
                         </tr>
                         <tr>
                             <td><img src="images/IMG-20200903-WA0027.jpg" width="100" height="100"><p>JET-AIR (INVERTER)</p></div>
-                            <td>36000BTU <i>(Cooling and Heating)</i></td>
+                            <td>36000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>53 - 64 Meters <i>(Squared)</td>
                         </tr>
                         <thead>
@@ -201,32 +201,32 @@ Author URL: http://iWADCommunity.com
                    
                         <tr>
                             <td><img src="images/IMG-20200903-WA0036.jpg" width="100" height="100"><p>JET-AIR (NON-INVERTER)</p></td>
-                            <td>9000BTU <i>(Cooling and Heating)</i></td>
+                            <td>9000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>12 - 18 Meters <i>(Squared)</i></td>
                         </tr>
                         <tr>
                             <td><img src="images/IMG-20200903-WA0027.jpg" width="100" height="100"><p>JET-AIR (NON-INVERTER</p></div>
-                            <td>12000BTU <i>(Cooling and Heating)</i></td>
+                            <td>12000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>15 - 22 Meters <i>(Squared)</td>
                         </tr>
                         <tr>
                             <td><img src="images/IMG-20200903-WA0036.jpg" width="100" height="100"><p>JET-AIR (NON-INVERTER)</p></div>
-                            <td>18000BTU <i>(Cooling and Heating)</i></td>
+                            <td>18000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>22 - 32 Meters <i>(Squared)</td>
                         </tr>
                         <tr>
                             <td><img src="images/IMG-20200903-WA0027.jpg" width="100" height="100"><p>JET-AIR (NON-INVERTER)</p></div>
-                            <td>24000BTU <i>(Cooling and Heating)</i></td>
+                            <td>24000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>29 - 42 Meters <i>(Squared)</td>
                         </tr>
                         <tr>
                             <td><img src="images/IMG-20200903-WA0036.jpg" width="100" height="100"><p>JET-AIR (NON-INVERTER)</p></div>
-                            <td>30000BTU <i>(Cooling and Heating)</i></td>
+                            <td>30000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>39 - 56 Meters <i>(Squared)</td>
                         </tr>
                         <tr>
                             <td><img src="images/IMG-20200903-WA0027.jpg" width="100" height="100"><p>JET-AIR (NON-INVERTER)</p></div>
-                            <td>36000BTU <i>(Cooling and Heating)</i></td>
+                            <td>36000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>53 - 64 Meters <i>(Squared)</td>
                         </tr>
                         
