--- a/Samsung  Aircon Specials South Africa .html
+++ b/Samsung  Aircon Specials South Africa .html
@@ -166,22 +166,22 @@ Author URL: http://iWADCommunity.com
                     <tbody>
                         <tr>
                             <td><img src="images/SAMSUNG.webp" width="100" height="100"><p>SAMSUNG (INVERTER)</p></td>
-                            <td>9000BTU <i>(Cooling and Heating)</i></td>
+                            <td>9000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>12 - 18 Meters <i>(Squared)</i></td>
                         </tr>
                         <tr>
                             <td><img src="images/SAMSUNG.webp" width="100" height="100"><p>SAMSUNG (INVERTER)</p></div>
-                            <td>12000BTU <i>(Cooling and Heating)</i></td>
+                            <td>12000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>15 - 22 Meters <i>(Squared)</td>
                         </tr>
                         <tr>
                             <td><img src="images/SAMSUNG.webp" width="100" height="100"><p>SAMSUNG (INVERTER)</p></div>
-                            <td>18000BTU <i>(Cooling and Heating)</i></td>
+                            <td>18000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>22 - 32 Meters <i>(Squared)</td>
                         </tr>
                         <tr>
                             <td><img src="images/SAMSUNG.webp" width="100" height="100"><p>SAMSUNG (INVERTER)</p></div>
-                            <td>24000BTU <i>(Cooling and Heating)</i></td>
+                            <td>24000BTU <br> <i>(Cooling and Heating)</i></td>
                             <td>29 - 42 Meters <i>(Squared)</td>
                         </tr>
                         <thead>
@@ -195,22 +195,22 @@ Author URL: http://iWADCommunity.com
                         </thead>
                         <tr>
                             <td><img src="images/SAMSUNG.webp" width="100" height="100"><p>SAMSUNG (NON-INVERTER)</p></td>
-                            <td>9000BTU <i>(Cooling and Heating)</i></td>
+                            <td>9000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>12 - 18 Meters <i>(Squared)</i></td>
                         </tr>
                         <tr>
                             <td><img src="images/SAMSUNG.webp" width="100" height="100"><p>SAMSUNG (NON-INVERTER</p></div>
-                            <td>12000BTU <i>(Cooling and Heating)</i></td>
+                            <td>12000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>15 - 22 Meters <i>(Squared)</td>
                         </tr>
                         <tr>
                             <td><img src="images/SAMSUNG.webp" width="100" height="100"><p>SAMSUNG (NON-INVERTER)</p></div>
-                            <td>18000BTU <i>(Cooling and Heating)</i></td>
+                            <td>18000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>22 - 32 Meters <i>(Squared)</td>
                         </tr>
                         <tr>
                             <td><img src="images/SAMSUNG.webp" width="100" height="100"><p>SAMSUNG (NON-INVERTER)</p></div>
-                            <td>24000BTU <i>(Cooling and Heating)</i></td>
+                            <td>24000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>29 - 42 Meters <i>(Squared)</td>
                         </tr>
 
