changing image file format

--- a/about.html
+++ b/about.html
@@ -197,7 +197,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="changeBackgroundAbout">
 					<br>
 					<br>
-					<img src="images/about.jpeg" alt=" " class="img-responsive" height="auto" width="550" />
+					<img src="images/about.jpg" alt=" " class="img-responsive" height="auto" width="550" />
 					</div>
 				</div>
 
