Changes On Home page and Addition of txt document
Added the keywords of website
changed "keyword " to "description"

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> Air-Conditioning and Refridgeration(PTY)LTD| Home :: IWAD.com</title>
+<title> Electro-Temp Air-Conditioning and Refridgeration(PTY)LTD| Home</title>
 <!-- Website icon -->
 <link rel="shortcut icon" type="image/png" href="images/favcon1.png">
 <!-- Website icon -->
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Here at Electro-Temp Air-Conditioning and Refridgeration (PTY) LTD, we aim to Always exceed our customers Expectations in their Air-Conditioning and Refridgeration needs." />
+<meta name="keywords" content="airconditiong, airconditioning cape town, aircon repairs, aircon specials, cheap aircons, ducting, HVAC, air conditioning, air conditioner, air conditioners, air con, air conditioning units, hvac air conditioning, heating and cooling, air condtioning unit, cooling &amp; heating, heat and air, air conditioning cooling, air conditioning repair, repair air conditioning, a/c repair, air con repair, air con service, airconditioning and maintenance, service ac, repair ac, samsung ac, lg ac, samsung air conditioners, service air conditioners, fix air conditioner, cheap air conditioning cape town, aircon repairs Cape Town, a/c repairs cape town, ac repairs cape town, air con repairs cape town, ac service cape town, aircon service cape town, aircon specials cape town, cheap aircon cape town, air con specials" />
+<meta name="description" content="Here at Electro-Temp Air-Conditioning and Refridgeration (PTY) LTD, we aim to Always exceed our customers Expectations in their Air-Conditioning and Refridgeration needs." />
 <!-- //for-mobile-apps -->
 <!-- Custom Theme files -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
