--- a/Other  Aircon Specials South Africa .html
+++ b/Other  Aircon Specials South Africa .html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> Air-Conditioning and Refridgeration(PTY)LTD| Specials :: IWADINC</title>
+<title>Electro-Temp Air-Conditioning and Refridgeration(PTY)LTD| Specials</title>
 <!-- Website icon -->
 <link rel="shortcut icon" type="image/png" href="images/favcon1.png">
 <!-- Website icon -->
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Here at Electro-Temp Air-Conditioning and Refridgeration (PTY) LTD, we aim to Always exceed our customers Expectations in their Air-Conditioning and Refridgeration needs." />
-<!-- //for-mobile-apps -->
+<meta name="keywords" content="Samsung aircons, LG aircons, Cheap aircons, Aircon sales, Airconditioning, airconditioners, Samsung air conditioners, LG air conditioners, aircon repairs, aircon maintenance, installations, aircon relocations, Cheap back to back, cheap brands, air conditioning Cape town, airconditioners Cape town" />
+<meta name="description" content="Electro-Temp Specials waiting for you , hurry now and get your special" /><!-- //for-mobile-apps -->
 <!-- Custom Theme files -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
