--- a/about.html
+++ b/about.html
@@ -1,21 +1,19 @@
 <!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
+Author: iWAD Community
+Author URL: http://iWADCommunity.com
 -->
-<!--========== CHECKING IF PUSH WORKS ===============-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> Air-Conditioning and Refridgeration(PTY)LTD| About :: IWAD.com</title>
+<title>Electro-Temp Air-Conditioning and Refridgeration(PTY)LTD| About</title>
 <!-- Website icon -->
 <link rel="shortcut icon" type="image/png" href="images/favcon1.png">
 <!-- Website icon -->
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="" />
+<meta name="keywords" content="electrotemp.co.za, electrotemp, electro-temp air-conditioning and refridgeration" />
+<meta name="description" content="As one of the fastest growing Air-Conditioning and Refridgeration company, we are S.A top supply and distributor of Domestic and industerial Air-Conditioning and Refridgeration equipmensts." />
 <!-- //for-mobile-apps -->
 <!-- Custom Theme files -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
