--- a/Air Conditioning Installations South Africa.html
+++ b/Air Conditioning Installations South Africa.html
@@ -1,20 +1,19 @@
 <!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
+Author: iWAD Community
+Author URL: http://iWADCommunity.com
 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> Air-Conditioning and Refridgeration(PTY)LTD| Air Conditioning repairs South Africa , Western Cape :: IWADINC</title>
+<title>Electro-Temp Air-Conditioning and Refridgeration(PTY)LTD| Installation</title>
 <!-- Website icon -->
 <link rel="shortcut icon" type="image/png" href="images/favcon1.png">
 <!-- Website icon -->
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Electronic Store Responsive w" />
+<meta name="keywords" content="aircon Installation, aircon Installations" />
+<meta name="description" content="We are commited to offer Quality services and INSTALLATIONS.Our aim is to provide outstanding Customers service and the highest workmanship standard while keeping our prices competative." />
 <!-- //for-mobile-apps -->
 <!-- Custom Theme files -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
