--- a/Air Conditioning Maintenance South Africa.html
+++ b/Air Conditioning Maintenance South Africa.html
@@ -1,20 +1,19 @@
 <!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
+Author: iWAD Community
+Author URL: http://iWADCommunity.com
 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> Air-Conditioning and Refridgeration(PTY)LTD|Air Conditioning Maintenance South Africa , Western Cape:: IWADINC</title>
+<title>Electro-Temp Air-Conditioning and Refridgeration(PTY)LTD| Maintanance</title>
 <!-- Website icon -->
 <link rel="shortcut icon" type="image/png" href="images/favcon1.png">
 <!-- Website icon -->
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Electronic Store Responsive w" />
+<meta name="keywords" content="Aircon Maintainance, havc maintainance" />
+<meta name="description" content="Our very responsible maintainance team is commited to excellent services and continually improving our companys well-known reputation for quality maintainance services." />
 <!-- //for-mobile-apps -->
 <!-- Custom Theme files -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
