--- a/Alliance Aircon Specials South Africa.html
+++ b/Alliance Aircon Specials South Africa.html
@@ -5,14 +5,16 @@ Author URL: http://iWADCommunity.com
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> Air-Conditioning and Refridgeration(PTY)LTD| Alliance Aircon Specials South Africa , Western Cape:: IWAD.com</title>
+<title>Specials - Electro-Temp Air-Conditioning</title>
 <!-- Website icon -->
 <link rel="shortcut icon" type="image/png" href="images/favcon1.png">
 <!-- Website icon -->
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Electronic Store Responsive w" />
+<meta name="keywords" content="Alliance Aircon Specials, Alliance Aircon" />
+<meta name="description" content="Electro-Temp Specials waiting for you , hurry now and get your special" />
+
 <!-- //for-mobile-apps -->
 <!-- Custom Theme files -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
