--- a/Daikan Aircon Specials South Africa.html
+++ b/Daikan Aircon Specials South Africa.html
@@ -5,14 +5,15 @@ Author URL: http://iWADCommunity.com
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> Air-Conditioning and Refridgeration(PTY)LTD| DAIKIN :: IWADINC</title>
+<title>Electro-Temp Air-Conditioning and Refridgeration(PTY)LTD| DAIKIN :: IWADINC</title>
 <!-- Website icon -->
 <link rel="shortcut icon" type="image/png" href="images/favcon1.png">
 <!-- Website icon -->
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Electronic Store Responsive w" />
+<meta name="keywords" content="DAIKAN ,Daikan non inverter, Daikan inverter ,Daikan aircon Specials, Daikan aircon, Daikan airconditioner, best aircon Brand" />
+<meta name="description" content="DAIKAN" />
 <!-- //for-mobile-apps -->
 <!-- Custom Theme files -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
