--- a/Samsung  Aircon Specials South Africa .html
+++ b/Samsung  Aircon Specials South Africa .html
@@ -5,14 +5,15 @@ Author URL: http://iWADCommunity.com
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> Air-Conditioning and Refridgeration(PTY)LTD| Samsung  Aircon Specials South Africa , Western Cape :: IWADINC</title>
+<title>Electro-Temp Air-Conditioning and Refridgeration(PTY)LTD| Samsung  Aircon Specials South Africa , Western Cape</title>
 <!-- Website icon -->
 <link rel="shortcut icon" type="image/png" href="images/favcon1.png">
 <!-- Website icon -->
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Electronic Store Responsive w" />
+<meta name="keywords" content="Samsung Aircon ,Samsung Aircon South Africa ,best Aircon ,Samsung havc" />
+<meta name="keywords" content="Samsung Aircon , One of the best brands" />
 <!-- //for-mobile-apps -->
 <!-- Custom Theme files -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
