--- a/otherPrices.html
+++ b/otherPrices.html
@@ -8,7 +8,8 @@
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Electronic Store Responsive w" />
+<meta name="keywords" content="Samsung aircons, LG aircons, Cheap aircons, Airconditioning, airconditioners, Samsung air conditioners, LG air conditioners, aircon repairs, aircon maintenance, installations, aircon relocations, Cheap back to back, cheap brands, air conditioning Cape town, airconditioners Cape town" />
+<meta name="description" content="Contact Us and Get a quatation of your aircon." />
 <!-- //for-mobile-apps -->
 <!-- Custom Theme files -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
