--- a/Air Conditioning Ventilation South Africa.html
+++ b/Air Conditioning Ventilation South Africa.html
@@ -105,7 +105,7 @@ Author URL: http://iWADCommunity.com
 							</li>
 								<!-- Mega Menu -->
 								<li class="dropdown" >
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown" >Our Specials <b class="caret"></b></a>
+									<a href="#" class="dropdown-toggle act" data-toggle="dropdown" >Price List <b class="caret"></b></a>
 									<ul class="dropdown-menu multi-column columns-2">
 										<div class="row">
 											<div class="col-sm-5">
@@ -119,13 +119,14 @@ Author URL: http://iWADCommunity.com
 												<ul class="multi-column-dropdown">
 													<h6>Price List</h6>
 													<li><a href="Samsung  Aircon Specials South Africa .html">Samsung  Aircon</a></li>
+													<li><a href="Alliance Aircon Specials South Africa.html">Alliance Aircon</a></li>
+													<li><a href="Jet-Air Aircone Specials South Africa.html">Jet-Air Aircon</a></li>
 													<li><a href="Midea Aircon Specials South Africa.html">Midea Aircon</a></li>
 													<li><a href="York Aircone Specials South Africa.html">York Aircon</a></li>
 													<li><a href="Daikan Aircon Specials South Africa.html">Daikan Aircon</a></li>
-													<li><a href="Alliance Aircon Specials South Africa.html">Alliance Aircon</a></li>
-													<li><a href="Jet-Air Aircone Specials South Africa.html">Jet-Air Aircon</a></li>
+													
 													<li><a href="otherPrices.html">Other<span class="fa fa-plus"></span></a></li></ul>
-											</div>
+															</div>
 											
 										</div>
 									</ul>
@@ -189,7 +190,7 @@ Author URL: http://iWADCommunity.com
 						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i><a style="text-decoration:none;color: whitesmoke;" href="tel:021 224 0411">021 224 0411</a></li>
 						<li><i class="fa fa-mobile-phone" aria-hidden="true"></i><a style="text-decoration:none;color: whitesmoke;" href="tel:+27 734858583">+27 734858583</a></li>
 						<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@electrotemp.co.za">info@electrotemp.co.za</a></li>
-						<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>B8 York Place, corner of De jeger street and York Rd, Kraaifontein, Cape Town</span></li>
+						<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>8 Strydpoort street, Ersteriver Cape town</span></li>
 
 					</ul>
 				</div>
