Replacing Jet Air page with Neo
also updating prices

--- a/Air Conditioning Installations South Africa.html
+++ b/Air Conditioning Installations South Africa.html
@@ -123,7 +123,7 @@ Author URL: http://iWADCommunity.com
 													<h6>Price List</h6>
 													<li><a href="Samsung  Aircon Specials South Africa .html">Samsung  Aircon</a></li>
 													<li><a href="Alliance Aircon Specials South Africa.html">Alliance Aircon</a></li>
-													<li><a href="Jet-Air Aircone Specials South Africa.html">Jet-Air Aircon</a></li>
+													<li><a href="NEO-COOL Aircone Specials South Africa.html">NEO-COOL Aircon</a></li>
 													<li><a href="Midea Aircon Specials South Africa.html">Midea Aircon</a></li>
 													<li><a href="York Aircone Specials South Africa.html">York Aircon</a></li>
 													<li><a href="Daikan Aircon Specials South Africa.html">Daikan Aircon</a></li>
