--- a/Samsung  Aircon Specials South Africa .html
+++ b/Samsung  Aircon Specials South Africa .html
@@ -123,7 +123,7 @@ Author URL: http://iWADCommunity.com
 													<h6>Price List</h6>
 													<li><a href="Samsung  Aircon Specials South Africa .html">Samsung  Aircon</a></li>
 													<li><a href="Alliance Aircon Specials South Africa.html">Alliance Aircon</a></li>
-													<li><a href="Jet-Air Aircone Specials South Africa.html">Jet-Air Aircon</a></li>
+													<li><a href="NEO-COOL Aircone Specials South Africa.html">NEO-COOL Aircon</a></li>
 													<li><a href="Midea Aircon Specials South Africa.html">Midea Aircon</a></li>
 													<li><a href="York Aircone Specials South Africa.html">York Aircon</a></li>
 													<li><a href="Daikan Aircon Specials South Africa.html">Daikan Aircon</a></li>
@@ -162,6 +162,7 @@ Author URL: http://iWADCommunity.com
                             <th>Brand</th>
                             <th>Unit Size</th>
                             <th>Applicable Room Size</th>
+							<th>Prices</th>
                             
                         </tr>
                     </thead>
@@ -170,21 +171,25 @@ Author URL: http://iWADCommunity.com
                             <td><img src="images/SAMSUNG.webp" width="100" height="100"><p>SAMSUNG (INVERTER)</p></td>
                             <td>9000BTU <br> <i>(Cooling and Heating)</i></td>
                             <td>12 - 18 Meters <i>(Squared)</i></td>
+							<td><m style="color: red;">R8,800<m/></td>
                         </tr>
                         <tr>
                             <td><img src="images/SAMSUNG.webp" width="100" height="100"><p>SAMSUNG (INVERTER)</p></div>
                             <td>12000BTU <br> <i>(Cooling and Heating)</i></td>
                             <td>15 - 22 Meters <i>(Squared)</td>
+							<td><m style="color: red;">R10,500<m/></td>
                         </tr>
                         <tr>
                             <td><img src="images/SAMSUNG.webp" width="100" height="100"><p>SAMSUNG (INVERTER)</p></div>
                             <td>18000BTU <br> <i>(Cooling and Heating)</i></td>
                             <td>22 - 32 Meters <i>(Squared)</td>
+							<td><m style="color: red;">R13,500<m/></td>
                         </tr>
                         <tr>
                             <td><img src="images/SAMSUNG.webp" width="100" height="100"><p>SAMSUNG (INVERTER)</p></div>
                             <td>24000BTU <br> <i>(Cooling and Heating)</i></td>
                             <td>29 - 42 Meters <i>(Squared)</td>
+							<td><m style="color: red;">R17,500<m/></td>
                         </tr>
                         <thead>
                             <tr>
@@ -199,21 +204,25 @@ Author URL: http://iWADCommunity.com
                             <td><img src="images/SAMSUNG.webp" width="100" height="100"><p>SAMSUNG (NON-INVERTER)</p></td>
                             <td>9000BTU <br> <i>(Cooling and Heating)</i></td>
                             <td>12 - 18 Meters <i>(Squared)</i></td>
+							<td><m style="color: red;">R8,600<m/></td>
                         </tr>
                         <tr>
                             <td><img src="images/SAMSUNG.webp" width="100" height="100"><p>SAMSUNG (NON-INVERTER</p></div>
                             <td>12000BTU <br> <i>(Cooling and Heating)</i></td>
                             <td>15 - 22 Meters <i>(Squared)</td>
+							<td><m style="color: red;">R9,100 <br><i>(On Special This Month R8,500)</m></i></td>
                         </tr>
                         <tr>
                             <td><img src="images/SAMSUNG.webp" width="100" height="100"><p>SAMSUNG (NON-INVERTER)</p></div>
                             <td>18000BTU <br> <i>(Cooling and Heating)</i></td>
                             <td>22 - 32 Meters <i>(Squared)</td>
+							<td><m style="color: red;">R12,150<m/></td>
                         </tr>
                         <tr>
                             <td><img src="images/SAMSUNG.webp" width="100" height="100"><p>SAMSUNG (NON-INVERTER)</p></div>
                             <td>24000BTU <br> <i>(Cooling and Heating)</i></td>
                             <td>29 - 42 Meters <i>(Squared)</td>
+							<td><m style="color: red;">R15,200<m/></td>
                         </tr>
 
                     </tbody>
