--- a/Alliance Aircon Specials South Africa.html
+++ b/Alliance Aircon Specials South Africa.html
@@ -120,7 +120,7 @@ Author URL: http://iWADCommunity.com
 													<h6>Price List</h6>
 													<li><a href="Samsung  Aircon Specials South Africa .html">Samsung  Aircon</a></li>
 													<li><a href="Alliance Aircon Specials South Africa.html">Alliance Aircon</a></li>
-													<li><a href="Jet-Air Aircone Specials South Africa.html">Jet-Air Aircon</a></li>
+													<li><a href="NEO-COOL Aircone Specials South Africa.html">NEO-COOL Aircon</a></li>
 													<li><a href="Midea Aircon Specials South Africa.html">Midea Aircon</a></li>
 													<li><a href="York Aircone Specials South Africa.html">York Aircon</a></li>
 													<li><a href="Daikan Aircon Specials South Africa.html">Daikan Aircon</a></li>
@@ -159,6 +159,7 @@ Author URL: http://iWADCommunity.com
                             <th>Brand</th>
                             <th>Unit Size</th>
                             <th>Applicable Room Size</th>
+							<th>Price</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -166,21 +167,25 @@ Author URL: http://iWADCommunity.com
                             <td><img src="images/IMG-20200903-WA0055_LI.jpg" width="100" height="100"><p>ALLIANCE (INVERTER)</p></td>
                             <td>9000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>12 - 18 Meters <i>(Squared)</i></td>
+							<td><m style="color: red;">R8,750</m></td>
                         </tr>
                         <tr>
                             <td><img src="images/IMG-20200903-WA0043 (2).jpg" width="100" height="100"><p>ALLIANCE (INVERTER)</p></div>
                             <td>12000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>15 - 22 Meters <i>(Squared)</td>
+							<td><m style="color: red;">R9,500</m></td>
                         </tr>
                         <tr>
                             <td><img src="images/IMG-20200903-WA0055_LI.jpg" width="100" height="100"><p>ALLIANCE (INVERTER)</p></div>
                             <td>18000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>22 - 32 Meters <i>(Squared)</td>
+							<td><m style="color: red;">R13,100</m></td>
                         </tr>
                         <tr>
                             <td><img src="images/IMG-20200903-WA0043 (2).jpg" width="100" height="100"><p>ALLIANCE (INVERTER)</p></div>
                             <td>24000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>29 - 42 Meters <i>(Squared)</td>
+							<td><m style="color: red;">R16,700</m></td>
                         </tr>
                         <thead>
                             <tr>
@@ -195,21 +200,31 @@ Author URL: http://iWADCommunity.com
                             <td><img src="images/IMG-20200903-WA0055_LI.jpg" width="100" height="100"><p>ALLIANCE (NON-INVERTER)</p></td>
                             <td>9000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>12 - 18 Meters <i>(Squared)</i></td>
+							<td><m style="color: red;">R7,600</m></td>
                         </tr>
                         <tr>
                             <td><img src="images/IMG-20200903-WA0055_LI.jpg" width="100" height="100"><p>ALLIANCE (NON-INVERTER</p></div>
                             <td>12000BTU<br> <i>(Cooling and Heating)</i></td>
                             <td>15 - 22 Meters <i>(Squared)</td>
+							<td><m style="color: red;">R8200 <br><i>(On Special This Month R7500)</m></i></td>
                         </tr>
                         <tr>
                             <td><img src="images/IMG-20200903-WA0055_LI.jpg" width="100" height="100"><p>ALLIANCE (NON-INVERTER)</p></div>
                             <td>18000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>22 - 32 Meters <i>(Squared)</td>
+							<td><m style="color: red;">R10,900<m/></td>
                         </tr>
                         <tr>
                             <td><img src="images/IMG-20200903-WA0043 (2).jpg" width="100" height="100"><p>ALLIANCE (NON-INVERTER)</p></div>
                             <td>24000BTU <br><i>(Cooling and Heating)</i></td>
                             <td>29 - 42 Meters <i>(Squared)</td>
+							<td><m style="color: red;">R14,300</m></td>
+                        </tr>
+						<tr>
+                            <td><img src="images/IMG-20200903-WA0043 (2).jpg" width="100" height="100"><p>ALLIANCE (NON-INVERTER)</p></div>
+                            <td>34000BTU <br><i>(Cooling and Heating)</i></td>
+                            <td>29 - 42 Meters <i>(Squared)</td>
+							<td><m style="color: red;">R17,500</m></td>
                         </tr>
 
                     </tbody>
