changing file name

--- a/NEO-COOL Aircone Specials South Africa.html
+++ b/NEO-COOL Aircone Specials South Africa.html
@@ -145,7 +145,7 @@ Author URL: http://iWADCommunity.com
 	<!-- banner -->
 	<div class="banner1">
 		<div class="container" >
-			<h3><m style="color: red;">Electro</m>-Temp Air-Conditioning and Refridgeration, <span>JET-AIR</span></h3>
+			<h3><m style="color: red;">Electro</m>-Temp Air-Conditioning and Refridgeration, <span>NEO-COOL</span></h3>
 		</div>
 	</div>
             <div class="tableSection">
